# InferencePlatform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
benchmarks/: _bench_common.py  concurrency_comparison.py  pytorch_optimizations.py
deploy/: otel-collector-config.yaml
deploy/grafana/dashboards/: inference_platform.json
deploy/k8s/: 00-namespace-config.yaml  10-redis.yaml  20-api-gateway.yaml  30-scheduler.yaml  40-inference-worker.yaml  50-metrics.yaml  kustomization.yaml
deploy/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  SCALING.md
libs/platform_common/: pyproject.toml
libs/platform_common/platform_common/: __init__.py
libs/platform_common/platform_common/config/: __init__.py  settings.py
libs/platform_common/platform_common/errors/: __init__.py  exceptions.py
libs/platform_common/platform_common/messaging/: __init__.py  keys.py  queues.py  redis_client.py
libs/platform_common/platform_common/observability/: __init__.py  logging.py  metrics.py  tracing.py
libs/platform_common/platform_common/schemas/: __init__.py  inference.py
libs/platform_common/platform_common/utils/: __init__.py  circuit_breaker.py  ids.py  images.py  retry.py  timing.py
libs/platform_common/tests/: test_circuit_breaker.py  test_rate_limiter_and_images.py
loadtest/: locustfile.py
scripts/: build_models.py
services/: __init__.py
services/api_gateway/: __init__.py  main.py
services/api_gateway/api/: dependencies.py  middleware.py  routes.py  schemas.py
services/api_gateway/application/: submit_use_case.py
services/api_gateway/domain/: rate_limiter.py
services/api_gateway/infrastructure/: gateway_client.py
services/api_gateway/tests/: test_integration.py
services/inference_worker/: __init__.py  main.py
services/inference_worker/api/: app.py
services/inference_worker/application/: janitor.py  worker_loop.py
services/inference_worker/domain/: catalog.py  executor.py  labels.py  registry.py  runtime.py
services/inference_worker/tests/: test_worker_domain.py
services/metrics/: __init__.py  main.py
services/metrics/api/: app.py
services/metrics/application/: aggregator_loop.py
services/metrics/domain/: collectors.py
services/scheduler/: __init__.py  main.py
services/scheduler/api/: app.py
services/scheduler/application/: scheduler_loop.py
services/scheduler/domain/: batcher.py  strategies.py
services/scheduler/tests/: test_batcher.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
(+25 files in other folders)
